[package]
name = "tm1637-gpio-driver"
version = "1.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
exclude = [
    "example-moving-text.gif",
    "example-time.gif",
    "examples/",
    ".travis.yml"
]
keywords = ["gpio", "tm1637"]
categories = ["embedded", "no-std", "hardware-support" ]
description = "Zero-dependency generic GPIO driver for the TM1637 micro controller, primarily for educational purpose. Doesn't need std-lib and you can choose any GPIO interface/library you want."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/phip1611/generic-tm1637-gpio-driver-rust"
repository = "https://github.com/phip1611/generic-tm1637-gpio-driver-rust"
documentation = "https://docs.rs/tm1637-gpio-driver/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default features:
default = ["fourdigit7segdis"]


# no dependencies; just used for conditional compilation
fourdigit7segdis = []

# "gpio-api-${crate.name}"
# mapping from feature to its dependencies
gpio-api-wiringpi = ["wiringpi"]

[dependencies]
#wiringpi = { version = "*", optional = true }
wiringpi = { version = "0.2.4", optional = true }
