[package]
name = "tm1637-gpio-driver"
version = "2.0.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
exclude = [
    "example-moving-text.gif",
    "example-time.gif",
    "examples/",
    ".travis.yml"
]
keywords = ["gpio", "tm1637"]
categories = ["embedded", "no-std", "hardware-support" ]
description = "Zero-dependency generic GPIO driver for the TM1637 micro controller, primarily for educational purpose. Doesn't need std-lib and you can choose any GPIO interface/library you want."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/phip1611/generic-tm1637-gpio-driver-rust"
repository = "https://github.com/phip1611/generic-tm1637-gpio-driver-rust"
documentation = "https://docs.rs/tm1637-gpio-driver/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

##################################################

[features]
# default features:
default = ["fourdigit7segdis", "dummy"]

# no dependencies; just used for conditional compilation
fourdigit7segdis = []

# only useful for debugging/testing; for example if you are developing on your mac
# and want to breakpoint into a function; wiringpi won't work on Mac for example
dummy = []

# "gpio-api-${crate.name}"
# mapping from feature to its dependencies
gpio-api-wiringpi = ["wiringpi"]
gpio-api-gpio_cdev = ["gpio-cdev"]
gpio-api-sysfs_gpio = ["sysfs_gpio"]
gpio-api-gpio = ["gpio"]

##################################################

[dependencies]
wiringpi = { version = "0.2.4", optional = true }
sysfs_gpio = { version = "0.5.4", optional = true }
gpio = { version = "0.4.0", optional = true }
gpio-cdev = { version = "0.3.0", optional = true }
