[package]
name = "tm1637-example"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tm1637-gpio-driver = { path = "../" }
wiringpi = "0.2"
chrono = "0.4.12"
