[package]
name = "tm1637-example"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tm1637-gpio-driver]
path = "../"
# we activate the wiringpi feature
# we also could initialize the driver manually with wiringpi tho with the same code
# that setup_wiringpi() uses :)
features = ["gpio-api-wiringpi"]

[dependencies]
chrono = "0.4.12"
